Change datastore to use PUT instead of POST (#16)
